--- a/basic.html
+++ b/basic.html
@@ -37,7 +37,7 @@
     <ul type="disk">
         <li>This is first Item of my unordered list</li>
         <li>This is second Item of my unordered list</li>
-        <ul>
+        <ul type="disk">
             <li>Another one</li>
             <li>Another one</li>
             <li>Another one</li>
@@ -46,7 +46,7 @@
     </ul>
     <ol type="1">
         <li>This is first Item of my ordered list</li>
-        <ol>
+        <ol type="a">
             <li>Another one</li>
             <li>Another one</li>
             <li>Another one</li>
@@ -59,6 +59,7 @@
     <!-- Tables in HTML -->
     <h3>Table</h3>
     <table>
+        <table border="1">
         <thead>
             <tr>
                 <th>Name</th>
@@ -109,9 +110,41 @@
         <div>
             <input type="submit" value="submitButton">
             <input type="reset" value="Reset Form">
+        </div>
+        <br>
+        <div>
+            <input type="date" value="datee">
+        </div>
     </form>
     <br>
     <hr>
+    <table>
+        <table border="1">
+        <thead>
+            <tr>
+                <th>
+                    <td rowspan = "2"></td>
+                </th>
+                <th>
+                    <td colspan="4"></td>
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Hlsdfgsdfgsdfgw</td>
+            </tr>
+            <tr>
+                <td>dfgdsfg</td>
+            </tr>
+            <tr>
+                <td>dfgsfgsdfg</td>
+            </tr>
+            <tr>
+                <td>sdfgdsfgsdfg</td>
+            </tr>
+        </tbody>
+    </table>
     
 
 
