Moved style to seprate CSS file

--- a/basic.html
+++ b/basic.html
@@ -4,67 +4,9 @@
     <!-- This is used for SEO -->
     <meta name="description" content="This is description of the page no ieda till now what it does IRL">
     <title>My first page</title>
-    <style>
-        body {
-            background-image: url(billi.jpg);
-            /* background-position: bottom right; */
-            background-position: 50% 20%;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-color: black;
-
-        }
-
-        p { background-color: aqua;
-            text-indent: 0.6em;
-            font-size: 1.3em;
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
-        }
-        span {  color: red;
-                font-size: 6pt;
-                height: 1em;
-        }
-        /* these are classes  class=""*/
-        .super1{
-            position: relative;
-            top: -1ex;
-        }
-        .sub1{
-            position: relative;
-            bottom: -1ex;
-        }
-        .shiftleft{
-            position: relative;
-            left: 1ex;
-        }
-        .shitright{
-            position: relative;
-            right: 1ex;
-        }
-        .bgi {
-            position: absolute;
-            top: 10px;
-            left: 10px;
-            z-index: 1;
-        }
-        .fgi {
-            position: absolute;
-            top: 25px;
-            left: 100px;
-            z-index: 2;
-        }
-        .text {
-            position: absolute;
-            top: 25px;
-            left: 100px;
-            z-index: 3;
-            font-size: 20pt;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
-    </style>
 
     <!-- This is how you can add CSS -->
-    <link rel="stylesheet" href="aman.css">
+    <link rel="stylesheet" href="aman.css" type="text/html">
     <!-- This is how you can add JS-->
     <script src="aman.js"></script>
 </head>
