--- a/tables.html
+++ b/tables.html
@@ -1,28 +1,43 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Table creation using row and colspan</title>
-</head>
-<body>
-  <table>
-    Table 1 :
-    <table border="1">
-    <tr>
-      <th rowspan="2">Header 1</th>
-      <th colspan="2">Header 2</th>
-    </tr>
-    <tr>
-      <th>Subheader 1</th>
-      <th>Subheader 2</th>
-    </tr>
-    <tr>
-      <td rowspan="2">Cell 1</td>
-      <td>Cell 2</td>
-      <td>Cell 3</td>
-    </tr>
-    <tr>
-      <td colspan="2">Cell 4</td>
-    </tr>
-  </table>
-</body>
-</html>
+<table border="1">
+  <tr>
+    <th>Product</th>
+    <th colspan="2">Price</th>
+  </tr>
+  <tr>
+    <td rowspan="2">Apple</td>
+    <td>$1.99</td>
+    <td>$0.99</td>
+  </tr>
+  <tr>
+    <td>Red</td>
+    <td>Green</td>
+  </tr>
+  <tr>
+    <td>Banana</td>
+    <td colspan="2">$0.49</td>
+  </tr>
+  <tr>
+    <td>Grapes</td>
+    <td colspan="2">$2.99</td>
+  </tr>
+  <tr>
+    <td rowspan="2">Mango</td>
+    <td>$1.00</td>
+    <td>$1.50</td>
+  </tr>
+  <tr>
+    <td>Raw</td>
+    <td>Ripe</td>
+  </tr>
+  <tfoot>
+    <th>
+      Total
+    </th>
+    <th>
+      6.47
+    </th>
+    <th>
+      2.49
+    </th>
+  </tfoot>
+</table>
