--- a/Assignment/11tables.html
+++ b/Assignment/11tables.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>NM Developers - catalog</title>
+    <meta charset="UTF-8">
+    <title>NM Developers - catalog</title>
 </head>
 <body>
   <h2>Product Lists</h2>
-    <table border =1, align="center">
+    <table border = 1 align="center">
     <thead>
         <tr>
             <th colspan = "3">Product</th>         
@@ -28,7 +29,7 @@
         <td>
             12 dollars each,
             <br>
-            delivery 50 dollars per mile.
+            delivery 50 dollar per mile.
         </td>
     </tr>
     <tr>
