--- a/Assignment/13FormFinal.html
+++ b/Assignment/13FormFinal.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>NM Developers</title>
         <style>
             .center {
@@ -31,7 +33,7 @@
           <option value="un">Monaco</option>
           <option value="jamaica">Jamaica</option>
           <option value="canada">Canada</option>
-        </select>
+        </select>
  <br>
  <br>
  <label> Comments: <br>
