--- a/basic.html
+++ b/basic.html
@@ -4,7 +4,7 @@
     <!-- This is used for SEO -->
     <meta name="description" content="This is description of the page no ieda till now what it does IRL">
     <title>My first page</title>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- This is how you can add CSS -->
     <link rel="stylesheet" href="basic.css" type="text/html">
     <!-- This is how you can add JS-->
@@ -43,7 +43,6 @@
     <hr>
 
     <!-- Lists in HTML -->
-
     <ul type="disk">
         <li>This is first Item of my unordered list</li>
         <li>This is second Item of my unordered list</li>
@@ -165,6 +164,6 @@
 
     <br>
 
-    <img src="billi.jpg" alt="Image is not present at source" height="320" width="240" title="Billi">
+    <img src="/assets/billi.jpg" alt="Image is not present at source" height="320" width="240" title="Billi">
 
 </body>
