--- a/transition.html
+++ b/transition.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Transition</title>
     <style>
         div{
@@ -18,6 +19,6 @@
     </style>
     </head>
     <body>
-            <img height="320px" class="img" src="billi.jpg">
+            <img height="320px" class="img" src="assets/billi2.jpg">
     </body>
 </html>
