--- a/Assignment/CSS4d.html
+++ b/Assignment/CSS4d.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>
-            CSS4d
-        </title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>CSS4d</title>
         <style>
             .Bluebg {
                 background-color: #002fff;
