--- a/mediatypes.html
+++ b/mediatypes.html
@@ -2,9 +2,10 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Meidia Styles</title>
         <style>
-            /* @media all
+            @media all
             {
                 h1 {font-family: Verdana, Geneva, Tahoma, sans-serif;}
                 p {font-size: 12pt;
@@ -13,7 +14,7 @@
             }
             @media print
             {
-            } */
+            }
             body {font-family: Arial, Helvetica, sans-serif;}
             nav {text-decoration: dotted;
                 border: 2em;}
