--- a/basic.html
+++ b/basic.html
@@ -5,7 +5,7 @@
     <meta name="description" content="This is description of the page no ieda till now what it does IRL">
     <title>My first page</title>
     <!-- This is how you can add CSS -->
-    <link rel="stylesheet" href="basic.css" type="text/html">
+    <link rel="stylesheet" href="basic.css" type="text/css">
     <!-- This is how you can add JS-->
     <script src="basic.js"></script>
 </head>
@@ -160,5 +160,4 @@
     </table>
     <br>
     <img src="/assets/billi.jpg" alt="Image is not present at source" height="320" width="240" title="Billi">
-
 </body>
