--- a/JS_math_function.html
+++ b/JS_math_function.html
@@ -5,11 +5,11 @@
         <title>Javascript</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script type="text/javascript">
-            var counter=10;
-            while(counter<=15)
+            var value;
+            for(var i=1; i<=10;i++)
             {
-                document.writeln("<p style = 'font-size:" + counter + "px;'>VI☕<p>");
-                counter++;
+                value=Math.floor(1+ Math.random()*6);
+                document.writeln(value);
             }
         </script>
     </head>
