--- a/JS_math_function.html
+++ b/JS_math_function.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Javascript</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1">4-098
         <script type="text/javascript">
             var value;
             for(var i=1; i<=10;i++)
